src/components/ProductList/ProductList.module.css
.product {
  color: #0f2137;
  background-color: #ffffff;
  border: 1px solid #e3e4e8;
  padding: 16px 12px 9px;
  border-radius: calc(1.5 * 4px);
  width: 100%;
  height: auto;
  padding: 16px 24px 8px;
  padding-right: 24px;
  margin: inherit;
}

.product:not(:last-child) {
  margin-bottom: 16px;
}

.productTitle {
  font-size: 4rem;
  font-size: 24px;
  font-weight: 600;
  margin: 0 0 16px;
  white-space: nowrap;
  overflow-x: hidden;
}

.productBody {
  margin: 0 0 16px;
}

.actionBar {
  display: flex;
  justify-content: flex-start;
  border-top: 1px solid #e3e4ee;
  padding-top: 8px;
  display: table;
  width: 100%;
}

.actionBarItem {
  cursor: pointer;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 8px;
}

.actionBarItem:hover {
  background-color: #f4f5f9;
}

.actionBarItem:global(.active) {
  color: #62bfad;
}

.actionBarItemLabel {
  margin-left: 8px;
}

.productListItem {
  display: inline-block;
  overflow-x: scroll;
  float: none;
  clear: both;
}

